--- a/src/App.css
+++ b/src/App.css
@@ -100,3 +100,11 @@ header {
   width: 1em;
 	margin-right: 0.5em;
 }
+.searchMessages input{
+	display:flex;
+	color:#fff;
+	padding-left:5px;
+}
+.searchMessages input ::placeholder{
+	color: #fff !important;
+}
