--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
 #root {
   margin: 0 auto;
-  padding: 0 2rem;
   width:100%;
 }
 header {
 	display:flex;
 	justify-content: space-between;
 	width:100%;
+	background:#0460D9;
+	padding: 0 2rem	
+}
+header a{
+ color:#021F59
 }
 .userSpace a{
 	display:block;
@@ -111,12 +115,70 @@ header {
 .addFolderButton{
 	display:flex;
 	justify-content: center;
-	border:1px solid #fff;
-	max-width:210px;
-	border-radius:15px;
-	padding:15px;	
 }
 .addFolderButton:hover{
 	background:#053250;
 	color:#248eea
+}
+#dashboard {
+	margin:0 auto;
+	max-width: 1200px;
+}
+.folderItem {
+	display:flex;
+	background:#fff;
+	color:#240caf;
+	border-radius:15px;
+	padding: 20px 10px;
+	width:100%;
+	box-shadow: 0px 0px 4px #fff;
+}
+.folderFunctions i {
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	padding:5px 8px;
+	box-sizing: border-box;
+	background: #d9d9d9;
+	border-radius:6px;
+	width:100%;	
+	max-width:45px;
+	height:40px
+}
+.folderFunctions i:hover{	
+	background: #e6e6e6;	
+}
+.contThoughtButton:hover{
+	background: #e6e6e6;
+	cursor:pointer;
+}
+.contThoughtButton{
+		padding:5px 8px;
+	box-sizing: border-box;
+	background: #d9d9d9;
+	border-radius:6px;
+	cursor:pointer;
+}
+.ReactModal__Overlay {
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open{
+    opacity: 1;
+	transition: opacity 200ms ease-in-out;
+}
+
+.ReactModal__Overlay--before-close{
+    opacity: 0;
+	  transition: opacity 200ms ease-in-out;
+}
+.ReactModal__Content{
+	max-width:800px;
+	max-height:400px;
+	margin:0 auto;
+	color:#000;
+}
+.ReactModal__Overlay{
+	background:rgb(0,0,0,0.8)!important;
 }
