--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   font-weight: 400;
 
   color: rgba(255, 255, 255, 0.87);
-  background-color: #002238;
+  background-color: #010D26;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,11 +29,11 @@ html,body{
 }
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #fff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #fff;
 }
 
 body {
