--- a/src/App.css
+++ b/src/App.css
@@ -22,14 +22,17 @@ header a{
 	justify-content: center;
 	min-height:80vh;
 }
-.chatbox{
+.chatbox {
   display: flex;
-  flex-direction: column;  /* ⬅️ stack children top-to-bottom */
+  flex-direction: column;
   justify-content: flex-end;
-  height: 760px;
+  flex: 1;
+  width: 100%;
   max-width: 1450px;
   margin: 0 auto;
-  position: relative;
+  height: 100%;
+  max-height: 700px;
+  overflow: hidden;
 }
 #reminder{	
 	text-align: center;
@@ -50,20 +53,23 @@ header a{
 #reminder i{
 	cursor: pointer;
 }
-.chatWrapper{
-	position: relative;
+.chatWrapper {
+  position: relative;
+  box-sizing: border-box;
+	height:100%;
+	max-height:825px;
 }
-.sentMessages{	
+.sentMessages {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  flex-direction: column-reverse;
   align-items: flex-end;
+  justify-content:space-between;
+  flex-grow: 1;
+  overflow-y: auto; 
   width: 100%;
-  max-width: 700px;
+  max-width: 700px;  
   margin: 0 auto;
-  flex: 1; 
   padding: 1rem;
-	position:relative;
 }
 .sendWrapper input {
 	width:100%;
@@ -116,14 +122,7 @@ header a{
 .searchMessages input ::placeholder{
 	color: #fff !important;
 }
-.addFolderButton{
-	display:flex;
-	justify-content: center;
-}
-.addFolderButton:hover{
-	background:#053250;
-	color:#248eea
-}
+
 #dashboard {
 	margin:0 auto;
 	max-width: 1200px;
@@ -192,4 +191,15 @@ header a{
 }
 .folderFormInput{
 	border:2px solid oklch(62.3% 0.214 259.815);
+}
+#hero{
+background: #020229;
+background: linear-gradient(346deg, rgba(2, 2, 41, 1) 34%, rgba(4, 96, 217, 1) 100%);
+height:86vh;
+}
+#leftHead {
+	padding:5px;
+}
+#leftHead li{
+	background-color: #1b608d;
 }
