--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   font-weight: 400;
 
   color: rgba(255, 255, 255, 0.87);
-  background-color: #010D26;
+  background-color: #01050e;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
