--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ header a{
   flex-grow: 1;
   overflow-y: auto; 
   width: 100%;
-  max-width: 700px;  
+ 
   margin: 0 auto;
   padding: 1rem;
 }
@@ -86,10 +86,12 @@ header a{
 .sendWrapper {
 	background:#2b2a33;	
 	display:flex;
-	align-items: center;
-	max-width:700px;
+	align-items: center;	
 	margin:0 auto;
 	border-radius: 25px;
+}
+.MuiGrid-root{
+height:90vh
 }
 .icons{
 	padding:0 20px;
@@ -98,7 +100,7 @@ header a{
 	display: none;
 }
 .sentMessage{
-	background-color: #1b608d;
+	background-color: #0460D9;
 	margin:10px 0;
 	padding:7px 15px;
 	border-radius: 15px;
@@ -201,5 +203,16 @@ height:86vh;
 	padding:5px;
 }
 #leftHead li{
-	background-color: #1b608d;
+	border: 2px solid #0460D9;
+}
+#leftHead li:hover{
+	background:#0460D9;
+	color:#01050e
+}
+#searchSideBarHead {
+	border-bottom:1px solid #0460D9;
+	padding-bottom: 5px;
+}
+#searchSideBarHead input::placeholder{
+	color:#0460D9;
 }
