--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,6 @@ header a{
   justify-content: flex-end;
   flex: 1;
   width: 100%;
-  max-width: 1450px;
   margin: 0 auto;
   height: 100%;
   max-height: 700px;
@@ -59,13 +58,12 @@ header a{
 }
 .sentMessages {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-items: flex-end;
-  justify-content:space-between;
+	justify-content: flex-end;
   flex-grow: 1;
   overflow-y: auto; 
   width: 100%; 
-  margin: 0 auto;
   padding: 1rem;
 	margin-top:17px;
 }
@@ -130,44 +128,46 @@ height:90vh
 }
 
 #dashboard {
-	margin:0 auto;
-	max-width: 1200px;
-}
-.folderItem {
 	display:flex;
-	background:#fff;
-	color:#240caf;
+	justify-content: space-between;
+	width:100%;
+	height:100%;
+	max-height: 800px
+}
+.thoughtItem {
+	display:flex;
+	background:#27292d;
+	color:#438eef;
 	border-radius:15px;
 	padding: 20px 10px;
 	width:100%;
-	box-shadow: 0px 0px 4px #fff;
+	max-width:350px;
+	border:2px solid #438eef;
 }
-.folderFunctions i {
+.thoughtFunctions i {
 	display:flex;
 	justify-content: center;
 	align-items: center;
 	padding:5px 8px;
-	box-sizing: border-box;
-	background: #d9d9d9;
+	box-sizing: border-box;	
 	border-radius:6px;
 	width:100%;	
 	max-width:45px;
-	height:40px
+	height:40px;	
+	border:2px solid #438eef;
 }
-.folderFunctions i:hover{	
-	background: #e6e6e6;	
-}
-.contThoughtButton:hover{
-	background: #e6e6e6;
-	cursor:pointer;
+
+.thoughtFunctions i:hover, .contThoughtButton:hover{
+	background-color: #3f4147;
 }
 .contThoughtButton{
-		padding:5px 8px;
-	box-sizing: border-box;
-	background: #d9d9d9;
+	padding:5px 8px;
+	box-sizing: border-box;	
 	border-radius:6px;
 	cursor:pointer;
+	border:2px solid #438eef;
 }
+
 .ReactModal__Overlay {
     opacity: 0;
     transition: opacity 200ms ease-in-out;
@@ -236,6 +236,34 @@ height:86vh;
 }
 .mobileHeader{
 	display:none;
+}
+
+.leftSidebar {
+	width:100%;
+	max-width: 250px;
+	margin-right:20px;
+	background-color:#151718;
+	height:100%;		
+}
+.sidebarLink{
+	padding:10px 15px;	
+	cursor: pointer;
+}
+.sidebarLink:hover{
+	background-color: #1d1f20;
+}
+.dashBody{
+	background:#151718;
+	padding:15px 20px;
+	margin:10px 0;
+	border-radius: 20px;
+}
+#tierName{
+	padding:2px 9px;
+	border-radius: 5px;
+}
+.chatInput{
+	padding:20px;
 }
 @media screen and (max-width:800px) {	
 	.mobileHeader{
